--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>0910</title>
     </head>
-    <body style="background-color: blanchedalmond;">
+    <body>
         <!--CSS-->
 
         <!--font size(字體大小)、px(像素)-->
@@ -21,11 +21,26 @@
             <!--top(上邊框)、bottom(底部)、left(左)、right(右邊)-->
             <!--20px 30px 40px 50px(順時針由上開始)-->
             <!--padding px值(正數) margin px值(正負數)-->
-            <div style="padding-top:20px;margin: 20px; background-color: aqua;">
+            <div style="padding-top:20px;margin: 20px; background-color: rgb(215, 233, 188);">
             第二段內文
         </div>
+
         <!-- float  & display-->  
-                        
-        
+        <!--left(左邊)right(右邊)-->
+        <!-- <img src="css.png" width="200px" style="float:left "/>   -->
+        <!-- <p>這是一段廢話</p>-->
+
+        <ul style="float: left;background-color:lightblue; margin: 0px ;padding :15px;">       
+            <li>主頁</li>
+            <li>部落格</li>
+            <li>關於</li>
+            <li>聯絡我們</li>
+        </ul>
+        <p>這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢話這是一段廢這是一段廢話這是一段廢話這是一段廢話</p>
+        <p>這是一段廢話</p>
+        <p>這是一段廢話</p>
+        <spaan>這是一段廢話</spaan>
+        <span>這是一段廢話</span>
+
     </body> 
 </html>
